<resources>
    <string name="app_name">GreenCare</string>
    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="hamdity">Humidity</string>
    <string name="heat">Tempriture</string>
    <string name="light">Light</string>
    <string name="about">About</string>
    <string name="contact_us">Contact Us</string>
    <string name="increase">Increase</string>
    <string name="decrease">Decrease</string>
    <string name="open">Open</string>
    <string name="close">Close</string>




</resources>
